<resources>
    <string name="app_name">Airline Flight Management</string>
    <string name="create_airline">Create Airline</string>
    <string name="create_flight">Create Flight</string>
    <string name="view_airlines">View Airlines</string>
    <string name="airline_flight_management">Airline Flight Management</string>
    <string name="enter_new_airline_name">Enter New Airline Name</string>
    <string name="confirm_airline_name">Confirm Airline Name</string>
    <string name="home">Home</string>
    <string name="create_this_airline">Create This Airline</string>
    <string name="select_time">Select Time</string>
    <string name="example_eva_air">Example: EVA Air</string>
    <string name="example_sea">Example: SEA</string>
    <string name="departure_ntime">Departure\nTime</string>
    <string name="arrival_niata_code">Arrival\nIATA Code</string>
    <string name="airline">Airline</string>
    <string name="select_date">Select Date</string>
    <string name="example_26">Example: 26</string>
    <string name="arrival_ntime">Arrival\nTime</string>
    <string name="arrival_ndate">Arrival\nDate</string>
    <string name="flight_nnumber">Flight\nNumber</string>
    <string name="departure_ndate">Departure\nDate</string>
    <string name="enter_flight_details">Enter Flight Details</string>
    <string name="example_tpe">Example: TPE</string>
    <string name="create_this_flight">Create This Flight</string>
    <string name="_23hr59min">23HR59MIN</string>
    <string name="_1234">1234</string>
    <string name="flight_number">Flight Number</string>
    <string name="src">SRC</string>
    <string name="des">DES</string>
    <string name="_12_34">12:34</string>
    <string name="_23_59">23:59</string>
    <string name="_12_31_2023">12/31/2023</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="guide_to_create_airline_n_1_simply_type_in_the_name_of_the_airline_n_2_if_the_airline_name_already_exists_a_new_airline_will_not_be_created">Guide to Create Airline:\n 1. Simply type in the name of the airline\n 2. If the airline name already exists, a new airline will not be created</string>
    <string name="guide_to_create_flight_n_1_type_in_the_airline_name_any_airline_name_not_in_system_will_be_created_n_2_flight_number_is_restricted_to_4_numerical_digits_n_3_departure_and_arrival_airport_iata_codes_are_strictly_3_characters_and_must_be_a_valid_iata_code_n_4_departure_date_time_and_arrival_date_time_are_in_the_same_timezone_n_5_departure_date_time_must_not_come_after_arrival_date_time_n"><![CDATA[Guide to Create Flight:\n 1. Type in the airline name - any airline name not in system will be created\n 2. Flight number is restricted to 4 numerical digits\n 3. Departure and Arrival airport IATA codes are strictly 3 characters and must be a valid IATA code\n 4. Departure Date & Time and Arrival Date & Time are in the same timezone\n 5. Departure Date & Time must not come after Arrival Date & Time\n]]></string>
    <string name="guide_to_view_airlines_n_1_create_airlines_before_using_view_airlines_function_n_2_on_the_page_tap_the_airline_name_to_see_the_airline_s_flights_see_5_n_3_a_search_bar_on_the_bottom_can_be_used_to_filter_by_airline_name_n_4_scroll_down_to_view_more_available_airlines_n_5_on_the_airline_s_flight_list_scroll_down_to_view_more_available_flights_n_6_two_search_bars_are_on_the_bottom_the_left_for_departure_iata_code_the_right_for_arrival_iata_code_n">Guide to View Airlines:\n 1. Create Airlines before using View Airlines function\n 2. On the page, tap the airline name to see the airline\'s flights (see #5)\n 3. A search bar on the bottom can be used to filter by airline name\n 4. Scroll down to view more available airlines\n 5. On the airline\'s flight list, scroll down to view more available flights\n 6. Two search bars are on the bottom, the left for departure IATA code, the right for arrival IATA code\n</string>
    <string name="enter_here">Enter Here</string>
    <string name="airline_android_project_n_is_an_airline_flight_management_system_an_android_application_n_an_android_application_that_allows_for_airlines_and_flights_to_be_created_stored_and_viewed_n_getting_started_n_these_instructions_will_help_you_run_the_program_on_your_local_machine_for_testing_and_development_purposes_n_prerequisites_n_java_8_or_later_n_android_api_33_or_later_n_installing_n_clone_the_repository_to_your_local_machine_n_download_android_studio_n_open_the_application_in_android_studio_n_create_an_android_emulator_with_android_api_33_to_view_the_app_n_usage_n_guide_to_view_airlines_n_1_create_airlines_before_using_view_airlines_function_n_2_on_the_page_tap_the_airline_name_to_see_the_airline_s_flights_see_5_n_3_a_search_bar_on_the_bottom_can_be_used_to_filter_by_airline_name_n_4_scroll_down_to_view_more_available_airlines_n_5_on_the_airline_s_flight_list_scroll_down_to_view_more_available_flights_n_6_two_search_bars_are_on_the_bottom_the_left_for_departure_iata_code_the_right_for_arrival_iata_code_n_guide_to_create_airline_n_1_simply_type_in_the_name_of_the_airline_n_2_if_the_airline_name_already_exists_a_new_airline_will_not_be_created_n_guide_to_create_flight_n_1_type_in_the_airline_name_any_airline_name_not_in_system_will_be_created_n_2_flight_number_is_restricted_to_4_numerical_digits_n_3_departure_and_arrival_airport_iata_codes_are_strictly_3_characters_and_must_be_a_valid_iata_code_n_4_departure_date_time_and_arrival_date_time_are_in_the_same_timezone_n_5_departure_date_time_must_not_come_after_arrival_date_time_n_built_with_n_java_8_n_android_api_33_n_pixel_5_api_33_emulator_n_asus_zenfone_6_api_31_n_contributing_n_professor_david_whitlock_for_the_airline_helper_source_files_n_https_github_com_davidwhitlock_portlandstatejavagettingstarted_n_authors_n_ming_hsuan_lu_student"><![CDATA[# Airline-Android Project\n Is an Airline Flight Management System - An Android Application\n An Android application that allows for airlines and flights to be created, stored and viewed.\n ## Getting Started\n These instructions will help you run the program on your local machine for testing and development purposes.\n ### Prerequisites\n - Java 8 or later\n - Android API 33 or later\n ### Installing\n - Clone the repository to your local machine\n - Download Android Studio\n - Open the application in Android Studio\n - Create an android emulator with Android API 33 to view the app\n ## Usage\n Guide to View Airlines:\n 1. Create Airlines before using View Airlines function\n 2. On the page, tap the airline name to see the airline\'s flights (see #5)\n 3. A search bar on the bottom can be used to filter by airline name\n 4. Scroll down to view more available airlines\n 5. On the airline\'s flight list, scroll down to view more available flights\n 6. Two search bars are on the bottom, the left for departure IATA code, the right for arrival IATA code\n Guide to Create Airline:\n 1. Simply type in the name of the airline\n 2. If the airline name already exists, a new airline will not be created\n Guide to Create Flight:\n 1. Type in the airline name - any airline name not in system will be created\n 2. Flight number is restricted to 4 numerical digits\n 3. Departure and Arrival airport IATA codes are strictly 3 characters and must be a valid IATA code\n 4. Departure Date & Time and Arrival Date & Time are in the same timezone\n 5. Departure Date & Time must not come after Arrival Date & Time\n ## Built With\n Java 8\n Android API 33\n Pixel 5 API 33 Emulator\n ASUS Zenfone 6 API 31\n ## Contributing\n Professor David Whitlock for the Airline helper source files:\n https://github.com/DavidWhitlock/PortlandStateJavaGettingStarted \n ##Authors\n Ming-Hsuan Lu, Student]]></string>
    <string name="view_readme">View ReadMe</string>
</resources>