<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/tan"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="220dp"
        android:text="@string/airline_flight_management"
        android:textColor="@color/blueBlack"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/viewAirlinesButton"
        android:layout_width="161dp"
        android:layout_height="55dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/blueBlack"
        android:onClick="goToListAllAirlinesActivity"
        android:text="@string/view_airlines"
        android:textColor="@color/tan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/createFlightButton"
        android:layout_width="161dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/blueBlack"
        android:onClick="goToCreateFlightActivity"
        android:text="@string/create_flight"
        android:textColor="@color/tan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <Button
        android:id="@+id/createAirlineButton"
        android:layout_width="161dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/blueBlack"
        android:onClick="goToCreateAirlineActivity"
        android:text="@string/create_airline"
        android:textColor="@color/tan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="161dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/blueBlack"
        android:onClick="goToHelp"
        android:text="Help"
        android:textColor="@color/tan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/baseline_connecting_airports_24"
        app:tint="@color/blueBlack" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="41dp"
        android:layout_height="37dp"
        app:tint="@color/blueBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        app:srcCompat="@drawable/baseline_manage_search_24" />

</androidx.constraintlayout.widget.ConstraintLayout>